--- a/client/userPage.css
+++ b/client/userPage.css
@@ -21,23 +21,31 @@ body {
     margin-left: 2%;
 }
 
+#profileName {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    font-size: 200%;
+}
+
 .calendarToggle {
     display: flex;
-    margin-right: 4%;
+    margin-right: 18%;
 }
 
 #planToggle {
-    border-style: solid;
+    border: solid;
+    border-width: 1px;
     border-top-left-radius: 20%;
     border-bottom-left-radius: 20%;
-    padding: 3%;
+    padding: 8%;
 }
 
 #logToggle {
-    border-style: solid;
+    border: solid;
+    border-width: 1px;
     border-top-right-radius: 20%;
     border-bottom-right-radius: 20%;
-    padding: 3%;
+    padding: 8%;
 }
 
 #planToggle:hover, #logToggle:hover {
@@ -62,12 +70,16 @@ body {
 
 
 #prevMonth, #nextMonth {
-    background-color: gray;
+    background-color: darkgray;
     color: white;
     border: none;
     padding: 10px;
     cursor: pointer;
     font-size: 16px;
+}
+
+#prevMonth:hover, #nextMonth:hover {
+    background-color: gray;
 }
 
 #currentMonth {
@@ -82,9 +94,13 @@ body {
 }
 
 .week {
-    padding: 2%;
-    background-color: darkgray;
+    padding: 0;
+    background-color: gray;
     border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
 }
 
 .blank {
@@ -138,17 +154,29 @@ body {
     margin-top: 20px;
 }
 
+.planContent div, .logContent div {
+    background-color: lightgray;
+    border-radius: 10px;
+    padding: 3%;
+    margin-bottom: 1%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.planButtons button {
+    margin-left: 5%;
+}
+
 #addWorkout {
-    background-color: darkgray;
+    background-color: lightgray;
     cursor: pointer;
-    padding: 5px;
-    border-style: solid;
-    border-color: black;
+    padding: 10px;
     border-radius: 20px;
 }
 
 #addWorkout:hover {
-    background-color: gray;
+    background-color: darkgray;
 }
 
 /* ............................. Categories and Workouts ..................................  */
